akhq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akhq
  namespace: mateusz-test-os

spec:
  selector:
    app: akhq

  ports:
    - name: http
      port: 8080
      targetPort: 8080
